2006-05-22  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/gnc-plugin-basic-commands.c: Deactivate the "Close
	Books" menu item because that feature is unfinished as well.

	* src/gnome/gnc-plugin-basic-commands.c: Hide the "Export account
	chart as QSF" as well. Not ready for 2.0.0 due to e.g. bug#341559.

2006-05-21  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/gnc-plugin-basic-commands.c,
	src/gnome/ui/gnc-plugin-basic-commands-ui.xml: Hide the "QSF
	Import" for the 2.0.0 release because it is not yet finished. Can
	be activated again in the next developing HEAD branch.

	* po/ro.po: Initial Romanian translation by Danny Fischer
	<dan.pescaru@gmail.com>

2006-05-20  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/gnc-file.[ch]:
	* src/import-export/log-replay/gnc-log-replay.c:
	* src/import-export/qif-import/druid-qif-import.c: Extend
	  gnc_file_dialog to take a GList of GtkFileFilters instead of a
	  filter string. Allows patterns like *.[Qq][Ii][Ff] without
	  messing up the dialog, fixes #336124.

2006-05-19  David Hampton  <hampton@employees.org>

	* src/register/register-gnome/gnucash-grid.c: Make the blue
	past/future dividing line thicker so that it is obvious.  Fixes
	#342051.

	* src/engine/engine-helpers.c:
	* macros/legacy_macros.m4:
	* configure.in: Make the removal of scm_block_gc conditional on
	having guile 1.8 installed.

	* src/engine/engine-helpers.c: More of the patch from Bill
	Nottingham for compiling with guile 1.8.

2006-05-17  Mike Alexander  <mta@umich.edu>

	* From bugzilla #342153.
        * src/engine/cap-gains.c (finder_helper): Don't add a split with
        the wrong sign to a lot and don't add any split to a lot that is
        fat.
        * src/engine/cap-gains.c (xaccSplitAssignToLot): Set the value and
        amount in the new split after it is in the transaction so the
        correct denominator can be found.
        * src/engine/cap-gains.c (xaccSplitAssign): Ignore splits with
        zero amounts.