@@ -4,7 +4,6 @@
       <menu name="FileImport" action="FileImportAction">
       	<placeholder name="FileImportPlaceholder">
       	   <menuitem name="FileQIFImport" action="QIFImportAction"/>
-      	   <menuitem name="FileQIFTestDruid" action="QIFTestDruid"/>
       	</placeholder>
       </menu>
     </menu>
